# ultimate-ai-rag

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
backend/: Dockerfile  README.md  mypy.ini  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250115_000004_align_tenant_id_types.py  20251229_000001_create_trajectory_tables.py  20251231_000002_add_trajectory_agent_type.py  20251231_000003_add_trajectory_has_error.py  20251231_000004_add_workspace_indexes.py  20260106_000005_create_scoped_memories_table.py  20260107_000006_add_missing_indexes.py  20260115_000004_align_tenant_id_types.py
backend/prompts/: contextual_retrieval_example.txt
backend/scripts/: migrate_to_graphiti.py
backend/src/agentic_rag_backend/: config.py  embeddings.py  main.py  orchestrator.py  rate_limit.py  retrieval_router.py  schemas.py  trajectory.py  validation.py
backend/src/agentic_rag_backend/agents/: __init__.py  indexer.py  orchestrator.py
backend/src/agentic_rag_backend/api/: __init__.py  utils.py
backend/src/agentic_rag_backend/benchmarks/: __init__.py  cli.py  datasets.py  metrics.py  runner.py
backend/src/agentic_rag_backend/codebase/: __init__.py  detector.py  extractor.py  parser.py  symbol_table.py  types.py
backend/src/agentic_rag_backend/core/: __init__.py  errors.py
backend/src/agentic_rag_backend/db/: __init__.py  graphiti.py  neo4j.py  postgres.py  redis.py
backend/src/agentic_rag_backend/feedback/: __init__.py  adapter.py  loop.py  models.py
backend/src/agentic_rag_backend/graph/: __init__.py  community.py  errors.py  models.py
backend/src/agentic_rag_backend/indexing/: chunker.py  (+16 more)
backend/tests/: __init__.py  conftest.py  test_bloom_filter.py  test_config.py  test_contextual.py  test_crawl_profiles.py  test_crawler_crawl4ai.py  test_crawler_deprecations.py  test_db_pool.py  test_fallback_providers.py  test_grader.py  test_group_g_caching_tuning.py  test_llm_provider_adapter.py  test_orchestrator.py  test_query_endpoint.py  test_rate_limit_redis.py  test_reranking.py  test_retrieval_router.py  test_schemas.py  test_tenant_isolation.py  test_utils.py  test_youtube_ingestion.py
backend/tests/agents/: test_indexer.py
backend/tests/api/: __init__.py  test_copilot_voice.py  test_ingest.py  test_ingest_document.py  test_knowledge.py  test_lazy_rag_api.py  test_query_router_api.py  test_telemetry.py  test_temporal_knowledge.py  test_tenant_security.py
backend/tests/benchmarks/: test_ingestion_benchmark.py  test_metrics.py  test_query_latency_benchmark.py  utils.py
backend/tests/compliance/: __init__.py  test_endpoint_spec.py
backend/tests/db/: test_graphiti.py  test_neo4j.py
backend/tests/feedback/: __init__.py  test_feedback.py
backend/tests/graph/: __init__.py  test_communities_api.py  test_community.py
backend/tests/indexing/: __init__.py  test_chunker.py  test_crawler.py  test_embeddings.py  test_enhanced_docling.py  test_entity_extractor.py  test_graph_builder.py  test_graphiti_ingestion.py  test_legacy_deprecation.py  test_multimodal.py  test_parser.py
backend/tests/integration/: conftest.py  test_a2a_e2e.py  test_a2a_middleware_api.py  test_a2a_resource_limits_api.py  test_ag_ui_errors_integration.py  test_ag_ui_metrics_integration.py  test_agui_streaming.py  test_graphiti_e2e.py  test_graphiti_integration.py  test_hybrid_retrieval.py  test_ingestion_pipeline.py  test_mcp_api_flow.py  test_mcp_e2e.py  test_mcp_ui_api.py  test_retrieval_pipeline.py
backend/tests/mcp_client/: __init__.py  test_client.py  test_config.py  test_dependencies.py  test_registry.py
backend/tests/mcp_server/: test_auth.py  test_registry.py  test_server.py  test_tools.py  test_types.py
backend/tests/memory/: __init__.py  test_consolidation.py  test_memories_api.py  test_scheduler.py  test_scopes.py  test_store.py
backend/tests/observability/: test_metrics.py
backend/tests/ontology/: __init__.py  test_ontology.py
backend/tests/ops/: __init__.py  test_cost_tracker.py  test_model_router.py  test_trace_crypto.py
backend/tests/protocols/: test_a2a_delegation.py  test_a2a_manager.py  test_a2a_messages.py  test_a2a_registry.py  test_a2ui.py  test_ag_ui_bridge.py  test_hitl_manager.py
backend/tests/retrieval/: test_cache.py  test_colbert.py  test_cross_language.py  test_dual_level.py  test_graph_rerankers.py  test_graph_traversal.py  test_graphiti_retrieval.py  test_hierarchical_chunking.py  test_hybrid_synthesis.py  test_lazy_rag.py  test_query_router.py  test_sparse_vectors.py  test_temporal_retrieval.py  test_types.py  test_vector_search.py
backend/tests/scripts/: test_migrate_to_graphiti.py
backend/tests/sdk/: test_client.py
backend/tests/security/: __init__.py  conftest.py  test_attack_simulations.py  test_tenant_isolation.py
backend/tests/sync/: __init__.py  test_sync.py
backend/tests/voice/: __init__.py  test_voice.py
(+823 files in other folders)
