[project]
name = "agentic-rag-backend"
version = "0.1.0"
description = "Backend API for the Agentic RAG + GraphRAG system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "agno==2.3.21",
  "fastapi==0.111.0",
  "python-dotenv==1.0.1",
  "uvicorn[standard]==0.30.0",
  # Epic 4 - Knowledge Ingestion Pipeline
  "crawl4ai>=0.3.0",
  "redis>=5.0.0",
  "asyncpg>=0.29.0",
  "tenacity>=8.0.0",
  "structlog>=24.0.0",
  "pydantic>=2.0.0",
  "httpx>=0.27.0",
  # Story 4.2 - PDF Document Parsing
  "docling>=2.15.0",
  "python-multipart>=0.0.6",
  "aiofiles>=24.1.0",
]

[project.scripts]
agentic-rag-backend = "agentic_rag_backend.main:run"

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag_backend"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]
