[project]
name = "agentic-rag-backend"
version = "0.1.0"
description = "Backend API for the Agentic RAG + GraphRAG system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "agno==2.3.21",
  "fastapi==0.111.0",
  "psycopg[binary]==3.3.2",
  "psycopg-pool==3.2.2",
  "redis==5.0.4",
  "python-dotenv==1.0.1",
  "uvicorn[standard]==0.30.0",
]

[project.scripts]
agentic-rag-backend = "agentic_rag_backend.main:run"

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag_backend"]

[tool.uv]
dev-dependencies = [
  "alembic==1.13.2",
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.6",
  "mypy>=1.10.0",
  "sqlalchemy==2.0.36",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
