[project]
name = "agentic-rag-backend"
version = "0.1.0"
description = "Backend API for the Agentic RAG + GraphRAG system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "agno==2.3.21",
  "fastapi==0.111.0",
  "psycopg[binary]==3.3.2",
  "psycopg-pool==3.2.2",
  "redis==5.0.4",
  "python-dotenv==1.0.1",
  "uvicorn[standard]==0.30.0",
  # Epic 4 - Knowledge Ingestion Pipeline
  "crawl4ai>=0.3.0",
  "asyncpg>=0.29.0",
  "tenacity>=8.0.0",
  "structlog>=24.0.0",
  "pydantic>=2.0.0",
  "httpx>=0.27.0",
  # Story 4.2 - PDF Document Parsing
  "docling>=2.15.0",
  "python-multipart>=0.0.6",
  "aiofiles>=24.1.0",
  # Story 4.3 - Agentic Entity Extraction
  "neo4j>=5.0.0",
  "tiktoken>=0.5.0",
  "openai>=1.0.0",
  "anthropic>=0.25.0",
  "google-genai>=0.3.0",
  "pgvector>=0.2.0",
  # Rate limiting
  "slowapi>=0.1.9",
  # Epic 5 - Graphiti Temporal Knowledge Graph (with multi-provider support)
  "graphiti-core[anthropic,google-genai,voyage]>=0.5.0",
  # Voyage AI embeddings (for Anthropic users since Anthropic has no native embeddings)
  "voyageai>=0.3.0",
  # Epic 11 - HTML parsing for markdown conversion
  "beautifulsoup4>=4.14.3",
  "markdownify>=1.2.2",
  # Epic 12 - Advanced Retrieval (Reranking)
  "cohere>=5.0",
  "FlashRank>=0.2.0",
  # Epic 12 - Advanced Retrieval (Corrective RAG Grader - optional)
  "tavily-python>=0.3.0",
  "sentence-transformers>=2.0.0",
  # Epic 13 - Enterprise Ingestion (YouTube Transcripts)
  "youtube-transcript-api>=0.6.0",
  # Epic 15 - Codebase Intelligence (Hallucination Detection)
  "tree-sitter>=0.25.2,<0.26.0",
  "tree-sitter-python>=0.25.2,<0.26.0",
  "tree-sitter-javascript>=0.25.2,<0.26.0",
  "tree-sitter-typescript>=0.25.2,<0.26.0",
  "gitignore-parser>=0.1.11",
  # Story 19-C5 - Prometheus Observability
  "prometheus-client>=0.20.0",
]

[project.scripts]
agentic-rag-backend = "agentic_rag_backend.main:run"
benchmark-retrieval = "agentic_rag_backend.benchmarks.cli:main"

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag_backend"]

[tool.uv]
dev-dependencies = [
  "alembic==1.13.2",
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.6",
  "mypy>=1.10.0",
  "types-aiofiles>=24.1.0.0",
  "sqlalchemy==2.0.36",
  "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
markers = [
  "integration: marks integration tests that require external services",
  "compliance: marks compliance tests for endpoint specification (Story 19-J2)",
]
filterwarnings = [
  "ignore:Please use `import python_multipart` instead.:PendingDeprecationWarning",
  "ignore:Support for class-based `config` is deprecated:DeprecationWarning:graphiti_core",
]

[tool.ruff]
line-length = 100
exclude = [
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".turbo",
  ".uv-cache",
  ".venv",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
